k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aninda-sarker-rahul-ns
  labels:
    name: aninda-sarker-rahul-ns
