k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ostad-ingress
  namespace: aninda-sarker-rahul-ns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ostad.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ostad-server
            port:
              number: 5050
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ostad-ui
            port:
              number: 80
  - host: mongo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express
            port:
              number: 8081
